完善各版本构建和细节调整